--- a/02.web/index.html
+++ b/02.web/index.html
@@ -11,14 +11,42 @@
 
     <!-- CSS STYLE -->
     <link rel="stylesheet" href="css/style.css">
-
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
 
 <body>
+
+    <!-- 스킵 네비게이션 -->
+    <div id="skip">
+        <a href="#cont_nav">전체 메뉴 바로가기</a>
+        <a href="#cont_ban">배너 영역 바로가기</a>
+        <a href="#cont_cont">컨텐츠 영역 바로가기</a>
+    </div>
+
+    <!-- wrap -->
     <div id="wrap">
         <!-- header -->
         <div id="header">
-            <div class="container">header</div>
+            <div class="container">
+
+                <!-- 헤더메뉴 -->
+                <div class="header">
+                    <div class="header-menu">
+                        <a href="#">Designer</a>
+                        <a href="#">Publisher</a>
+                        <a href="https://www.youtube.com" target="_blank">Youtube</a>
+                    </div>
+                    <!-- 헤더 타이틀 -->
+                    <div class="header-title">
+                        <h1>Professional Publisher &amp; Designer </h1><br>
+                        <a href="#">hoons.com</a>
+                    </div>
+
+
+                    <div class="header-icon"></div>
+                </div>
+            </div>
         </div>
 
         <!-- content -->
