--- a/02.web/index.html
+++ b/02.web/index.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Nanum+Brush+Script&family=Nanum+Gothic:wght@400;700;800&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -66,22 +69,150 @@
 
             <!-- cont_nav -->
             <div id="cont_nav">
-                <div class="container">cont_nav</div>
+                <div class="container">
+                    <h2 class="ir_su">전체 메뉴</h2>
+                    <div class="nav">
+                        <div>
+                            <h3>HTML reference</h3>
+                            <ol>
+                                <li><a href="#">HTML 태그(Tag)</a></li>
+                                <li><a href="#">블록 요소/인라인 요소</a></li>
+                                <li><a href="#">DTD 선언</a></li>
+                                <li><a href="#">언어 속성 설정</a></li>
+                                <li><a href="#">HTML &lt;title&gt;</a></li>
+                                <li><a href="#">HTML &lt;meta&gt;</a></li>
+                                <li><a href="#">특수문자</a></li>
+                                <li><a href="#">하이퍼 링크</a></li>
+                                <li><a href="#">HTML &lt;style&gt;</a></li>
+                                <li><a href="#">HTML &lt;html&gt;</a></li>
+                                <li><a href="#">HTML &lt;head&gt;</a></li>
+                                <li><a href="#">HTML &lt;div&gt;</a></li>
+                                <li><a href="#">HTML &lt;colgroup&gt;</a></li>
+                                <li><a href="#">HTML &lt;caption&gt;</a></li>
+                            </ol>
+                        </div>
+                        <div>
+                            <h3>CSS Reference</h3>
+                            <ol>
+                                <li><a href="#">CSS 선택자</a></li>
+                                <li><a href="#">CSS 단위</a></li>
+                                <li><a href="#">CSS 색상</a></li>
+                                <li><a href="#">CSS 선언 방법</a></li>
+                                <li><a href="#">상대주소와 절대주소</a></li>
+                                <li><a href="#">CSS float</a></li>
+                                <li><a href="#">이미지 표현 방법</a></li>
+                                <li><a href="#">이미지 스프라이트</a></li>
+                                <li><a href="#">IR 효과</a></li>
+                                <li><a href="#">이미지 최적화</a></li>
+                                <li><a href="#">background-color</a></li>
+                                <li><a href="#">border-style</a></li>
+                                <li><a href="#">font-size</a></li>
+                                <li><a href="#">text-align</a></li>
+                            </ol>
+                        </div>
+                        <div class="last">
+                            <h3>Webstandard</h3>
+                            <ol>
+                                <li><a href="#">웹 표준</a></li>
+                                <li><a href="#">웹 접근성</a></li>
+                                <li><a href="#">W3C</a></li>
+                                <li><a href="#">웹 접근성 연구소</a></li>
+                                <li><a href="#">네이버 널리</a></li>
+                                <li><a href="#">다음 다룸</a></li>
+                                <li><a href="#">Webstandard</a></li>
+                            </ol>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <!-- cont_title -->
             <div id="cont_title">
-                <div class="container">cont_title</div>
+                <div class="container">
+                    <div class="title">
+                        <h2>"나는 퍼블리셔다"</h2>
+                        <a href="#" class="btn"><span class="ir_pm">전체메뉴</span></a>
+                    </div>
+                </div>
             </div>
 
             <!-- cont_ban -->
             <div id="cont_ban">
-                <div class="container">cont_ban</div>
+                <div class="container">
+                    <div class="banner">
+                        <a href="#" class="prev"><span class="ir_pm">이전 이미지</span></a>
+                        <ul>
+                            <li class="ban_img1"><a href="#"><img src="img/banner_link1.jpg" alt="웹 표준 지침서 보기"> </a>
+                            </li>
+                            <li class="ban_img2"><a href="#"><img src="img/banner_link2.jpg" alt="CSS를 이용한 입체적인 버튼 만들기">
+                                </a></li>
+                            <li class="ban_img3"><a href="#"><img src="img/banner_link3.jpg" alt="HTML5를 이용한 로그인 폼 만들기">
+                                </a></li>
+                        </ul>
+                        <a href="#" class="next"><span class="ir_pm">다음 이미지</span></a>
+                    </div>
+                </div>
             </div>
 
             <!-- cont_cont -->
             <div id="cont_cont">
-                <div class="container">cont_cont</div>
+                <div class="container">
+                    <div class="cont">
+                        <!-- col1 -->
+                        <div class="column col1">
+                            <h3>
+                                <span class="ico_img ir_pm">아이콘</span>
+                                <span class="ico_title">Notice</span>
+                                <p class="ico_desc">가장 웹 페이지에서 기본이 되는 게시판 유형입니다.</p>
+                            </h3>
+                        </div>
+
+                        <!-- col2 -->
+                        <div class="column col2">
+                            <h3>
+                                <span class="ico_img ir_pm">아이콘</span>
+                                <span class="ico_title">Notice</span>
+                                <p class="ico_desc">가장 웹 페이지에서 기본이 되는 게시판 유형입니다.</p>
+                            </h3>
+                        </div>
+
+                        <!-- col3 -->
+                        <div class="column col3">
+                            <h3>
+                                <span class="ico_img ir_pm">아이콘</span>
+                                <span class="ico_title">Notice</span>
+                                <p class="ico_desc">가장 웹 페이지에서 기본이 되는 게시판 유형입니다.</p>
+                            </h3>
+                        </div>
+
+                        <!-- col4 -->
+                        <div class="column col4">
+                            <h3>
+                                <span class="ico_img ir_pm">아이콘</span>
+                                <span class="ico_title">Notice</span>
+                                <p class="ico_desc">가장 웹 페이지에서 기본이 되는 게시판 유형입니다.</p>
+                            </h3>
+                        </div>
+
+                        <!-- col5 -->
+                        <div class="column col5">
+                            <h3>
+                                <span class="ico_img ir_pm">아이콘</span>
+                                <span class="ico_title">Notice</span>
+                                <p class="ico_desc">가장 웹 페이지에서 기본이 되는 게시판 유형입니다.</p>
+                            </h3>
+                        </div>
+
+                        <!-- col6 -->
+                        <div class="column col6">
+                            <h3>
+                                <span class="ico_img ir_pm">아이콘</span>
+                                <span class="ico_title">Notice</span>
+                                <p class="ico_desc">가장 웹 페이지에서 기본이 되는 게시판 유형입니다.</p>
+                            </h3>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
