--- a/01.Layout/Layout04.html
+++ b/01.Layout/Layout04.html
@@ -1,81 +1,100 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>layout04</title>
+
+
     <style>
         body {
-            background-color: #c8e6c9;
+            background-color: antiquewhite;
         }
 
         #wrap {
-            width: 1000px;
-            height: 900px;
-            margin: 0 auto;
+            color: #fff;
             font-size: 40px;
-            color: #FFF;
             text-align: center;
             text-transform: uppercase;
+            width: 1000px;
+            height: 1000px;
+            margin: 0 auto;
+            background-color: rgb(96, 53, 136);
         }
 
 
         .header {
             width: 1000px;
-            height: 100px;
-            background-color: rgb(159, 36, 36);
-            line-height: 100px;
+            height: 200px;
+            line-height: 200px;
+            background-color: blue;
         }
 
         .nav {
             width: 1000px;
-            height: 100px;
-            background-color: rgb(165, 24, 135);
-            line-height: 100px;
+            height: 200px;
+            line-height: 200px;
+            background-color: black;
         }
 
         .side {
             float: left;
             width: 300px;
-            height: 600px;
-            background-color: rgb(113, 113, 10);
-            line-height: 600px;
+            height: 400px;
+            line-height: 400px;
+            background-color: gray;
         }
+
+
 
         .content1 {
             float: left;
             width: 700px;
-            height: 300px;
-            background-color: rgb(11, 130, 11);
-            line-height: 300px;
+            height: 200px;
+            line-height: 200px;
+            background-color: crimson;
         }
 
         .content2 {
             float: left;
             width: 700px;
-            height: 300px;
-            background-color: rgb(5, 92, 5);
-            line-height: 300px;
+            height: 200px;
+            line-height: 200px;
+            background-color: tomato;
         }
 
         .footer {
-            clear: both;
+            height: 200px;
             width: 1000px;
-            height: 300px;
-            background-color: rgb(93, 93, 188);
-            line-height: 300px;
+            clear: both;
+            line-height: 200px;
+            background-color: darkslategray;
         }
     </style>
 </head>
 
 <body>
     <div id="wrap">
-        <div class="header">header</div>
-        <div class="nav">nav</div>
-        <div class="side">side</div>
-        <div class="content1">content1</div>
-        <div class="content2">content2</div>
-        <div class="footer">footer</div>
+        <div class="header">
+            header
+        </div>
+        <div class="nav">
+            nav
+        </div>
+        <div class="side">
+            side
+        </div>
+        <div class="content1">
+            content1
+        </div>
+        <div class="content2">
+            content2
+        </div>
+        <div class="footer">
+            footer
+        </div>
     </div>
 </body>
 
