--- a/01.Layout/Layout02.html
+++ b/01.Layout/Layout02.html
@@ -1,82 +1,102 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Layout2</title>
+
     <style>
         body {
-            background-color: #c8e6c9;
+            background: #0e6de0;
         }
 
         #wrap {
+            margin: 50px auto;
             width: 1000px;
-            height: 900px;
-            margin: 0 auto;
+            height: 1000px;
+            border: 1px solid red;
             font-size: 40px;
-            color: #FFF;
+            color: #fff;
             text-align: center;
-            text-transform: uppercase;
-
         }
 
         #header {
-            width: 1000px;
-            height: 100px;
-            background-color: rgb(159, 36, 36);
-            line-height: 100px;
+            width: 100%;
+            height: 200px;
+            background-color: rgb(60, 38, 100);
+            line-height: 200px;
+
         }
 
         #nav {
-            width: 1000px;
-            height: 100px;
-            background-color: rgb(197, 81, 24);
-            line-height: 100px;
+            width: 100%;
+            height: 200px;
+            background-color: rgb(41, 57, 57);
+            line-height: 200px;
         }
 
         #side_left {
+            height: 400px;
+            width: 300px;
+            line-height: 400px;
+            background-color: blue;
             float: left;
-            width: 30%;
-            height: 600px;
-            background-color: rgb(113, 113, 10);
-            line-height: 600px;
         }
 
         #contents {
             float: left;
-            width: 40%;
-            height: 600px;
-            background-color: green;
-            line-height: 600px;
+            width: 400px;
+            float: left;
+            height: 400px;
+            line-height: 400px;
+            background-color: rgb(204, 193, 91);
+
         }
 
         #side_right {
             float: left;
-            width: 30%;
-            height: 600px;
-            background-color: rgb(68, 18, 150);
-            line-height: 600px;
+            line-height: 400px;
+            height: 400px;
+            width: 300px;
+            background-color: chocolate;
         }
 
         #footer {
+            height: 200px;
+            width: 100%;
+            line-height: 200px;
             clear: both;
-            width: 1000px;
-            height: 100px;
-            background-color: rgb(93, 93, 188);
-            line-height: 100px;
+            background-color: rgb(93, 64, 21);
+
+
         }
     </style>
 </head>
 
 <body>
     <div id="wrap">
-        <div id="header">header</div>
-        <div id="nav">nav</div>
-        <div id="side_left">side_left</div>
-        <div id="contents">contents</div>
-        <div id="side_right">side_right</div>
-        <div id="footer">footer</div>
+        <div id="header">
+            HEADER
+        </div>
+        <div id="nav">
+            NAV
+        </div>
+        <div id="side_left">
+            SIDE_LEFT
+        </div>
+        <div id="contents">
+            CONTENTS
+        </div>
+        <div id="side_right">
+            SIDE_RIGHT
+        </div>
+        <div id="footer">
+            FOOTER
+        </div>
     </div>
+
 </body>
 
 </html>
