--- a/01.Layout/Layout03.html
+++ b/01.Layout/Layout03.html
@@ -1,66 +1,77 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Layout03</title>
+
     <style>
         body {
-            background-color: #c8e6c9;
+            background-color: #666;
         }
 
         #wrap {
+            background-color: #222;
             width: 1000px;
             height: 900px;
-            margin: 0 auto;
+            margin: auto;
+            color: #fff;
             font-size: 40px;
-            color: #FFF;
             text-align: center;
-            text-transform: lowercase;
-
         }
 
         .side {
-            float: left;
             width: 300px;
             height: 900px;
-            background-color: rgb(113, 113, 10);
-            line-height: 900px;
+            float: left;
+            line-height: 1000px;
+            background-color: darkblue;
         }
 
         .header {
-            float: left;
             width: 700px;
             height: 300px;
-            background-color: rgb(159, 36, 36);
+            float: left;
             line-height: 300px;
+            background-color: coral;
+
         }
 
-
         .contents {
-            float: left;
             width: 700px;
             height: 300px;
-            background-color: green;
+            float: left;
             line-height: 300px;
+            background-color: green;
+
         }
 
         .footer {
-            float: left;
             width: 700px;
             height: 300px;
-            background-color: rgb(93, 93, 188);
+            float: left;
             line-height: 300px;
+            background-color: rgb(53, 53, 119);
         }
     </style>
 </head>
 
 <body>
     <div id="wrap">
-        <div class="side">side</div>
-        <div class="header">header</div>
-        <div class="contents">contents</div>
-        <div class="footer">footer</div>
+        <div class="side">
+            side
+        </div>
+        <div class="header">
+            header
+        </div>
+        <div class="contents">
+            contents
+        </div>
+        <div class="footer">
+            footer
+        </div>
     </div>
 </body>
 
