--- a/01.Layout/Layout05.html
+++ b/01.Layout/Layout05.html
@@ -1,98 +1,97 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>layout05</title>
+
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            background-color: #c8e6c9;
-        }
-
         #wrap {
-            color: white;
-            font-size: 40px;
+            margin: 50px auto;
             text-align: center;
-            text-transform: uppercase;
+            color: #fff;
+            font-size: 40px;
+
         }
 
-        #header-wrap {
-            /* width: 100%;
-            height: 100px; */
-            background-color: #8d6e63;
+        .header_container {
+            width: 100%;
+            background-color: #000;
         }
 
-        #banner-wrap {
-            /* width: 100%;
-            height: 300px; */
-            background-color: #a1887f;
+        .banner_container {
+            width: 100%;
+            background-color: rgb(131, 78, 9);
         }
 
-        #contents-wrap {
-            /* width: 100%;
-            height: 500px; */
-            background-color: #bcaaa4;
+        .content_container {
+            width: 100%;
+            background-color: rgb(58, 43, 24);
         }
 
-        #footer-wrap {
-            /* width: 100%;
-            height: 100px; */
-            background-color: #d7ccc8;
+        .footer_container {
+            width: 100%;
+            background-color: rgb(100, 95, 88);
         }
 
-        .header-container {
-            width: 1000px;
-            height: 100px;
-            background-color: #3e2723;
+
+        .header {
+            background-color: #999;
             margin: 0 auto;
-            line-height: 100px;
-
+            width: 1000px;
+            height: 200px;
+            line-height: 200px;
         }
 
-        .banner-container {
-            width: 1000px;
-            height: 300px;
-            background-color: #4e342e;
+        .banner {
+            background-color: #666;
             margin: 0 auto;
-            line-height: 300px;
+            width: 1000px;
+            height: 400px;
+            line-height: 400px;
         }
 
-        .contents-container {
-            width: 1000px;
-            height: 500px;
-            background-color: #5d4037;
+        .content {
+            background-color: #333;
             margin: 0 auto;
-            line-height: 500px;
+            width: 1000px;
+            height: 400px;
+            line-height: 400px;
         }
 
-        .footer-container {
-            width: 1000px;
-            height: 100px;
-            background-color: #6d4c41;
+        .footer {
+            background-color: #ccc;
             margin: 0 auto;
-            line-height: 100px;
+            width: 1000px;
+            height: 200px;
+            line-height: 200px;
         }
     </style>
 </head>
 
 <body>
     <div id="wrap">
-        <div id="header-wrap">
-            <div class="header-container">header</div>
+        <div class="header_container">
+            <div class="header">
+                header
+            </div>
         </div>
-        <div id="banner-wrap">
-            <div class="banner-container">banner</div>
+        <div class="banner_container">
+            <div class="banner">
+                banner
+            </div>
         </div>
-        <div id="contents-wrap">
-            <div class="contents-container">contents</div>
+        <div class="content_container">
+            <div class="content">
+                content
+            </div>
         </div>
-        <div id="footer-wrap">
-            <div class="footer-container">footer</div>
+        <div class="footer_container">
+            <div class="footer">
+                footer
+            </div>
         </div>
     </div>
 </body>
