--- a/01.Layout/Layout06.html
+++ b/01.Layout/Layout06.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <title>Layout06</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>layout06</title>
+
     <style>
         * {
             margin: 0;
@@ -11,65 +14,73 @@
         }
 
         #wrap {
+            color: #fff;
+            font-size: 40px;
             text-align: center;
-            font-size: 30px;
-            color: #FFF;
         }
 
         #header {
+            width: 100%;
             height: 140px;
             line-height: 140px;
-            background-color: #ffe1e4;
+            background-color: cadetblue;
         }
 
         #banner {
+            width: 100%;
             height: 450px;
             line-height: 450px;
-            background-color: #fbd6e3;
+            background-color: aqua;
         }
 
         #contents {
+            width: 100%;
             height: 950px;
             line-height: 950px;
-            background-color: #ead5ee;
+            background-color: aquamarine;
         }
 
         #footer {
+            width: 100%;
             height: 220px;
             line-height: 220px;
-            background-color: #d6ebfd;
+            background-color: aliceblue;
         }
 
         .container {
             width: 1100px;
-            height: inherit;
             margin: 0 auto;
-            background-color: rgba(0, 0, 0, 0.3);
+            background-color: rgba(0, 0, 0, 0.5);
+            height: inherit;
         }
     </style>
+
 </head>
 
 <body>
     <div id="wrap">
         <div id="header">
-            <div class="header-container container">
+            <div class="container">
                 header
             </div>
         </div>
         <div id="banner">
-            <div class="banner-container container">
+            <div class="container">
                 banner
             </div>
+
         </div>
         <div id="contents">
-            <div class="contents-container container">
+            <div class="container">
                 contents
             </div>
+
         </div>
         <div id="footer">
-            <div class="footer-container container">
+            <div class="container">
                 footer
             </div>
+
         </div>
     </div>
 </body>
