--- a/01.Layout/Layout07.html
+++ b/01.Layout/Layout07.html
@@ -3,51 +3,66 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Layout07</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>layout07</title>
+
     <style>
-        /* reset css */
+        /* 리셋 css */
         * {
             margin: 0;
             padding: 0;
         }
 
+
         /* 전체 레이아웃 */
         #wrap {
+            width: 100%;
+            color: #fff;
             font-size: 20px;
-            color: #FFF;
             text-align: center;
         }
 
         #header {
             height: 140px;
+            width: 100%;
         }
 
         #banner {
-            height: 450px;
-            line-height: 450px;
             background-color: #4dd0e1;
+            height: 450px;
+            width: 100%;
+            line-height: 450px;
         }
 
         #contents {
+            background-color: #333;
+
             height: 950px;
+            width: 100%;
         }
 
         #footer {
+            background-color: #444;
             height: 220px;
+            width: 100%;
         }
 
         /* 레이아웃 */
-        #header-top {
+
+        #header_top {
+            width: 100%;
             height: 70px;
             line-height: 70px;
             background-color: #b2ebf2;
-
         }
 
-        #header-nav {
+        #header_nav {
+            width: 100%;
             height: 70px;
             line-height: 70px;
             background-color: #80deea;
+
         }
 
         #content1 {
@@ -68,50 +83,49 @@
             background-color: #00acc1;
         }
 
-        #footer-nav {
+        #footer_nav {
+            width: 100%;
             height: 60px;
-            line-height: 60px;
             background-color: #0097a7;
+            line-height: 60px;
         }
 
-        #footer-info {
+        #footer_info {
+            width: 100%;
             height: 160px;
             line-height: 160px;
             background-color: #00838f;
         }
 
-        /* 컨테이너 */
-
+        /* container */
         .container {
             width: 1100px;
             margin: 0 auto;
             height: inherit;
-            background-color: rgba(0, 0, 0, 0.3);
+            background: rgba(0, 0, 0, 0.3);
         }
     </style>
 </head>
 
 <body>
-    <!-- wrap -->
     <div id="wrap">
-
-        <!-- header -->
         <div id="header">
-            <div id="header-top">
-                <div class="container">header-top</div>
+            <div id="header_top">
+                <div class="container">
+                    header_top
+                </div>
             </div>
-            <div id="header-nav">
-                <div class="container">header-nav</div>
+            <div id="header_nav">
+                <div class="container">
+                    header_nav
+                </div>
             </div>
-        </div>
-
-
-        <!-- banner -->
+        </div><!-- header -->
         <div id="banner">
-            <div class="container">banner</div>
-        </div>
-
-        <!-- contents -->
+            <div class="container">
+                banner
+            </div>
+        </div><!-- banner -->
         <div id="contents">
             <div id="content1">
                 <div class="container">content1</div>
@@ -122,20 +136,20 @@
             <div id="content3">
                 <div class="container">content3</div>
             </div>
-        </div>
-
-        <!-- footer -->
+        </div><!-- contents -->
         <div id="footer">
-            <div id="footer-nav">
-                <div class="container">footer-nav</div>
+            <div id="footer_nav">
+                <div class="container">
+                    footer-nav
+                </div>
             </div>
-            <div id="footer-info">
-                <div class="container">footer-info</div>
+            <div id="footer_info">
+                <div class="container">
+                    footer-info
+                </div>
+
             </div>
-        </div>
-
-
-        <!-- wrap -->
+        </div><!-- footer -->
     </div>
 </body>
 
